cealdemo/tests/neg1/149.gold
Error: (line 3:1 '.aaa2') Macro [aaa2] is not defined
