cealdemo/tests/neg1/149.sct
# bad macro

.aaa2

.def aaa
0 0 (-1)
.end


